--- a/index.html
+++ b/index.html
@@ -19,128 +19,104 @@
   <a href="cma.html">CMA</a>
   <a href="skills.html">Skills</a>
   <a href="compare.html">Compare</a>
-  <a href="pathfinder.html">Path Finder</a>
 </nav>
 
 <header>
-  <h1>Clear Career Roadmaps for Commerce Students</h1>
-  <p>
-    Confused between B.Com, CA, MBA, BBA, CS, or CMA?<br>
-    Get structured guidance, skills roadmap, and realistic career clarity.
-  </p>
+  <h1>A Clear Career Roadmap for Commerce Students</h1>
+  <p>B.Com, CA, MBA, BBA, CS, CMA — understand skills before choosing a career.</p>
+  <a href="skills.html" class="btn">Start with Skills</a>
 </header>
 
 <section class="course">
-  <h2>Who Is This Website For?</h2>
-  <ul>
-    <li>Commerce students confused about careers</li>
-    <li>Students choosing between B.Com, BBA, CA, MBA, CS, CMA</li>
-    <li>Those who want skills, not just degrees</li>
-  </ul>
-</section>
-
-<section class="course">
-  <h2>Explore Career Paths</h2>
-
-  <div class="career-grid">
-
-    <div class="career-card">
-      <h3>B.Com</h3>
-      <p>Flexible degree for accounting, finance & future specialisation.</p>
-      <a href="bcom.html">View Roadmap →</a>
+  <h2>Who Is This For?</h2>
+  <div class="cards">
+    <div class="card">
+      <h3>Class 11–12 Students</h3>
+      <p>Confused about what to choose after commerce.</p>
+      <a href="skills.html" class="btn">See Required Skills</a>
     </div>
 
-    <div class="career-card">
-      <h3>BBA</h3>
-      <p>Management-focused path for leadership & business roles.</p>
-      <a href="bba.html">View Roadmap →</a>
+    <div class="card">
+      <h3>College Students</h3>
+      <p>Want clarity, internships, and practical direction.</p>
+      <a href="skills.html" class="btn">Build Skills</a>
     </div>
 
-    <div class="career-card">
-      <h3>CA</h3>
-      <p>Elite finance career with high difficulty and high reward.</p>
-      <a href="ca.html">View Roadmap →</a>
+    <div class="card">
+      <h3>CA / MBA Aspirants</h3>
+      <p>Looking for strategy, not motivation.</p>
+      <a href="compare.html" class="btn">Compare Paths</a>
     </div>
 
-    <div class="career-card">
-      <h3>CS</h3>
-      <p>Corporate law, governance & compliance specialist.</p>
-      <a href="cs.html">View Roadmap →</a>
+    <div class="card">
+      <h3>Completely Confused</h3>
+      <p>Don’t know where to start.</p>
+      <a href="skills.html" class="btn">Start Here</a>
     </div>
-
-    <div class="career-card">
-      <h3>CMA</h3>
-      <p>Costing, strategy & performance management expert.</p>
-      <a href="cma.html">View Roadmap →</a>
-    </div>
-
-    <div class="career-card">
-      <h3>MBA</h3>
-      <p>Career acceleration into leadership & high-growth roles.</p>
-      <a href="mba.html">View Roadmap →</a>
-    </div>
-
   </div>
 </section>
-  <section class="course">
-  <h2>Why Skills Matter More Than Degrees</h2>
-  <p>
-    Degrees decide eligibility. Skills decide salary, growth, and respect.
-  </p>
 
-  <ul>
-    <li>Excel & Data Skills</li>
-    <li>Accounting & Financial Understanding</li>
-    <li>Taxation & Compliance</li>
-    <li>Communication & Professional Skills</li>
-    <li>AI & Future Skills</li>
-  </ul>
+<section class="course">
+  <h2>Explore Career Roadmaps</h2>
+  <div class="cards">
+    <div class="card">
+      <h3>B.Com</h3>
+      <p>Flexible foundation with many career options.</p>
+      <a href="bcom.html" class="btn">View Roadmap</a>
+    </div>
 
-  <p>
-    👉 <a href="skills.html"><strong>View the complete Commerce Skills Roadmap →</strong></a>
-  </p>
+    <div class="card">
+      <h3>CA</h3>
+      <p>High difficulty, high long-term payoff.</p>
+      <a href="ca.html" class="btn">View Roadmap</a>
+    </div>
+
+    <div class="card">
+      <h3>MBA</h3>
+      <p>Career acceleration and leadership roles.</p>
+      <a href="mba.html" class="btn">View Roadmap</a>
+    </div>
+
+    <div class="card">
+      <h3>BBA</h3>
+      <p>Early exposure to management and business.</p>
+      <a href="bba.html" class="btn">View Roadmap</a>
+    </div>
+
+    <div class="card">
+      <h3>CS</h3>
+      <p>Corporate law and governance expertise.</p>
+      <a href="cs.html" class="btn">View Roadmap</a>
+    </div>
+
+    <div class="card">
+      <h3>CMA</h3>
+      <p>Cost management and strategic finance.</p>
+      <a href="cma.html" class="btn">View Roadmap</a>
+    </div>
+  </div>
 </section>
 
 <section class="course">
-  <h2>What Makes This Site Different?</h2>
+  <h2>Skills Matter More Than Degrees</h2>
+  <p>
+    Degrees decide eligibility. <strong>Skills decide income, growth, and respect.</strong>
+  </p>
+  <a href="skills.html" class="btn">View Complete Skills Roadmap</a>
+</section>
+
+<section class="course">
+  <h2>Why Trust This Site?</h2>
   <ul>
-    <li>No sugarcoating about salaries or difficulty</li>
-    <li>Skill-focused, not degree-worship</li>
+    <li>No paid courses or fake promises</li>
     <li>Built specifically for Indian commerce students</li>
-    <li>Step-by-step roadmaps, not generic advice</li>
+    <li>Practical, skill-focused guidance</li>
+    <li>Structured roadmaps, not random advice</li>
   </ul>
 </section>
 
-<section class="course">
-  <h2>How to Use This Website</h2>
-  <ol>
-    <li>Start with your current course (B.Com / BBA)</li>
-    <li>Explore 2–3 future paths (CA, MBA, CS, CMA)</li>
-    <li>Note required skills & effort level</li>
-    <li>Decide early and prepare strategically</li>
-  </ol>
-</section>
-
-<section class="course">
-  <h2>Reality Check</h2>
-  <p>
-    Degrees don’t create careers. Skills + decisions do.
-    Most students realise this too late. This website exists so you don’t.
-  </p>
-</section>
-  <section class="course">
-  <h2>Why This Site Exists</h2>
-  <p>
-    Most commerce students waste years due to lack of clarity.
-    This platform exists to provide honest, structured, and realistic guidance —
-    without selling courses or false promises.
-  </p>
-</section>
-
-  <footer>
-  <p>
-    Start with clarity. Build skills early. Make informed career decisions.
-  </p>
+<footer>
+  <p>Helping commerce students make smarter career decisions</p>
 </footer>
 
 </body>
