--- a/index.html
+++ b/index.html
@@ -114,6 +114,28 @@
     <li>Structured roadmaps, not random advice</li>
   </ul>
 </section>
+  <section class="course">
+  <h2>🧭 Confused About Which Commerce Path to Choose?</h2>
+
+  <p>
+    Choosing between B.Com, CA, MBA, BBA, CS, or CMA can feel overwhelming.
+    Most students pick blindly — and regret it later.
+  </p>
+
+  <p>
+    That’s exactly why we built <strong>Pathfinder</strong>.
+  </p>
+
+  <ul>
+    <li>✔ Based on your interests & strengths</li>
+    <li>✔ No random advice or fake motivation</li>
+    <li>✔ Clear direction, not confusion</li>
+  </ul>
+
+  <p style="margin-top: 15px;">
+    <a href="pathfinder.html"><strong>Use Pathfinder → Find Your Best Commerce Path</strong></a>
+  </p>
+</section>
 
 <footer>
   <p>Helping commerce students make smarter career decisions</p>
