--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
 </nav>
 
 <header>
-  <h1>A Clear Career Roadmap for Commerce Students</h1>
-  <p>B.Com, CA, MBA, BBA, CS, CMA — understand skills before choosing a career.</p>
+  <h1>Clear Career Roadmaps for Commerce Students</h1>
+<p>
+Confused between B.Com, CA, MBA, BBA, CS or CMA?
+This site shows you what to choose, what skills to learn,
+and how to avoid costly career mistakes.
+</p>
   <a href="skills.html" class="btn">Start with Skills</a>
 </header>
 
