--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ Confused between B.Com, CA, MBA, BBA, CS or CMA?
 This site shows you what to choose, what skills to learn,
 and how to avoid costly career mistakes.
 </p>
-  <a href="skills.html" class="btn">Start with Skills</a>
+  <a href="skills.html"><strong>Start with Skills →</strong></a>
+<a href="pathfinder.html">Not sure? Use Pathfinder →</a>
 </header>
 
 <section class="course">
