--- a/index.html
+++ b/index.html
@@ -140,6 +140,18 @@ and how to avoid costly career mistakes.
   <p style="margin-top: 15px;">
     <a href="pathfinder.html"><strong>Use Pathfinder → Find Your Best Commerce Path</strong></a>
   </p>
+  </section>
+  <section class="course">
+  <h2>Why This Website Exists</h2>
+  <p>
+    Most commerce students waste years due to lack of clear guidance.
+    This platform is built to give practical, no-nonsense direction —
+    based on skills, real careers, and long-term growth.
+  </p>
+
+  <p>
+    No paid promotions. No fake promises. Just clarity.
+  </p>
 </section>
 
 <footer>
