--- a/ca.html
+++ b/ca.html
@@ -26,6 +26,30 @@
     <a href="skills.html">View the complete Commerce Skills Roadmap →</a>
   </p>
 </section>
+  <section class="course">
+  <h2>⚠️ Read This Before Choosing CA</h2>
+  <ul>
+    <li>CA is not a shortcut to money</li>
+    <li>Average completion time is 5–7 years</li>
+    <li>Multiple attempts are common</li>
+    <li>Consistency matters more than intelligence</li>
+  </ul>
+</section>
+  
+   <h2>🤔 Should You Choose CA?</h2>
+  <p><strong>Choose CA if:</strong></p>
+  <ul>
+    <li>You are comfortable with numbers and laws</li>
+    <li>You can study consistently for years</li>
+    <li>You want a high-responsibility career</li>
+  </ul>
+
+  <p><strong>Avoid CA if:</strong></p>
+  <ul>
+    <li>You want quick results or shortcuts</li>
+    <li>You struggle with long-term discipline</li>
+    <li>You dislike accounting or law</li>
+  </ul>
   
 <section class="course">
   <h1>CA (Chartered Accountant) Career Roadmap</h1>
@@ -53,6 +77,10 @@ Long-term success matters more than speed.
 </p>
 
   <h2>📍 CA Roadmap</h2>
+  <p>
+CA is a marathon, not a sprint.
+Treat each level as a separate long-term commitment.
+</p>
   <ul>
     <li><strong>Foundation:</strong> Accounting, Business Laws, Economics, Quantitative Aptitude</li>
     <li><strong>Intermediate:</strong> Advanced Accounting, Taxation, Audit, Cost Management</li>
@@ -60,13 +88,17 @@ Long-term success matters more than speed.
     <li><strong>Final:</strong> Financial Reporting, Strategic Financial Management, Audit</li>
   </ul>
 
-  <h2>🧠 Skills Required to Succeed in CA</h2>
-  <ul>
-    <li>Strong conceptual understanding of accounting</li>
-    <li>Time management & discipline</li>
-    <li>Stress handling & consistency</li>
-    <li>Excel & basic data analysis</li>
-  </ul>
+  <section class="course">
+  <h2>Skills You Must Build Alongside CA</h2>
+  <p>
+    Clearing exams alone is not enough in today’s market.
+    Practical skills decide job quality and growth.
+  </p>
+  <p>
+    👉 <a href="skills.html">View the complete CA + Skills roadmap here</a>
+  </p>
+</section>
+
   <h2>🚀 Skills That Make a CA Stand Out</h2>
 <p>
 Passing CA makes you qualified. These skills decide how far and how fast you grow.
@@ -94,6 +126,11 @@ Passing CA makes you qualified. These skills decide how far and how fast you gro
     <li>With 3–5 years experience: ₹12–20 LPA</li>
     <li>Senior roles / Practice: ₹25 LPA+</li>
   </ul>
+  <p>
+Top salaries are rare and skill-dependent.
+Most CAs grow steadily, not instantly.
+</p>
+  
   <h2>🏅 CA Rank Holders – Benefits & Reality</h2>
 
 <p>
@@ -138,22 +175,17 @@ Skills, experience, and professional reputation matter more in the long run.
     <li>Ignoring revisions and mock tests</li>
     <li>Comparing speed with others</li>
   </ul>
-
-  <h2>🤔 Should You Choose CA?</h2>
-
-  <p><strong>Choose CA if:</strong></p>
-  <ul>
-    <li>You are comfortable with numbers and laws</li>
-    <li>You can study consistently for years</li>
-    <li>You want a high-responsibility career</li>
-  </ul>
-
-  <p><strong>Avoid CA if:</strong></p>
-  <ul>
-    <li>You want quick results or shortcuts</li>
-    <li>You struggle with long-term discipline</li>
-    <li>You dislike accounting or law</li>
-  </ul>
+</section>
+  
+  <section class="course">
+  <h2>Still Confused?</h2>
+  <p>
+    CA is not for everyone — and that’s okay.
+    If you want clarity before committing years of effort:
+  </p>
+  <p>
+    👉 <a href="pathfinder.html">Use the Career Pathfinder Tool</a>
+  </p>
 </section>
 
 <footer>
