--- a/bba.html
+++ b/bba.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>BBA Career Roadmap</title>
-  <meta name="description" content="Complete BBA career roadmap including skills, jobs, salaries, and future opportunities.">
+  <title>BBA Roadmap | Commerce Career Guide</title>
+  <meta name="description" content="Clear BBA roadmap covering skills, careers, salary reality, and who should or should not choose BBA.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
-  <body>
+<body>
 
 <nav class="navbar">
   <a href="index.html">Home</a>
@@ -23,157 +23,135 @@
 </nav>
 
 <header>
-  <h1>BBA Career Roadmap</h1>
-  <p>How to use BBA smartly for management, MBA, and corporate careers</p>
+  <h1>BBA (Bachelor of Business Administration)</h1>
+  <p>A realistic guide to what BBA offers — and what it does NOT.</p>
 </header>
 
 <section class="course">
-  <h2>What is BBA?</h2>
   <p>
-    BBA (Bachelor of Business Administration) builds a foundation in management,
-    business thinking, communication, and leadership. It is ideal for students
-    who want early exposure to the corporate and management world.
+    🔑 <strong>Important:</strong> BBA alone does not guarantee high-paying jobs.
+    Growth comes from <a href="skills.html">skills</a>, internships, and specialization.
   </p>
 </section>
 
 <section class="course">
-  <h2>Who Should Choose BBA?</h2>
-  <ul>
-    <li>Students interested in management, leadership, or business roles</li>
-    <li>Those planning for an MBA in the future</li>
-    <li>Students who want internships & corporate exposure early</li>
-    <li>People willing to build skills alongside college</li>
-  </ul>
-</section>
-
-<section class="course">
-  <h2>BBA Roadmap (Year-wise)</h2>
-
-  <h3>Year 1 – Foundation</h3>
-  <ul>
-    <li>Basics of management, economics & accounting</li>
-    <li>Strong focus on communication skills</li>
-    <li>Start Excel & PowerPoint</li>
-  </ul>
-
-  <h3>Year 2 – Exposure</h3>
-  <ul>
-    <li>Internships (marketing, operations, HR, startups)</li>
-    <li>Digital marketing or analytics basics</li>
-    <li>Case studies & presentations</li>
-  </ul>
-
-  <h3>Year 3 – Direction</h3>
-  <ul>
-    <li>Decide: MBA / Job / Specialization</li>
-    <li>CAT / GMAT preparation (if MBA planned)</li>
-    <li>Build resume & placement readiness</li>
-  </ul>
-</section>
-
-<section class="course">
-  <h2>Must-Learn Skills During BBA (Standout Factor)</h2>
-  <ul>
-    <li>Advanced Excel & basic data analysis</li>
-    <li>PowerPoint (professional presentations)</li>
-    <li>Business communication & confidence</li>
-    <li>Digital marketing basics</li>
-    <li>Problem-solving & case thinking</li>
-  </ul>
-  <p>
-    👉 For detailed skill explanations and resources,
-    <a href="skills.html">visit the Commerce Skills Roadmap</a>.
-  </p>
-</section>
-
-<section class="course">
-  <h2>Career Options After BBA</h2>
-  <ul>
-    <li>Management Trainee</li>
-    <li>Business Development Executive</li>
-    <li>Marketing Executive</li>
-    <li>HR Executive</li>
-    <li>Operations Coordinator</li>
-    <li>MBA (Finance, Marketing, HR, Analytics, Operations)</li>
-  </ul>
-</section>
-
-<section class="course">
-  <h2>Salary Reality (India)</h2>
-  <ul>
-    <li>Fresh graduate: ₹2.5–4 LPA</li>
-    <li>With 2–3 years experience + skills: ₹5–7 LPA</li>
-    <li>After MBA: ₹8–25+ LPA (college & skills dependent)</li>
-  </ul>
-  <p><strong>Truth:</strong> BBA alone has limited growth without skills or MBA.</p>
-</section>
-
-<section class="course">
-  <h2>Free Learning Resources</h2>
-  <ul>
-    <li>
-      Excel & Business Skills –
-      <a href="https://learn.microsoft.com/en-us/training/" target="_blank">
-        Microsoft Learn
-      </a>
-    </li>
-    <li>
-      Management Concepts –
-      <a href="https://www.youtube.com/@LearnWithSumit" target="_blank">
-        Learn With Sumit (YouTube)
-      </a>
-    </li>
-    <li>
-      MBA & Case Prep –
-      <a href="https://www.youtube.com/@InsideIIM" target="_blank">
-        InsideIIM (YouTube)
-      </a>
-    </li>
-  </ul>
-</section>
-
-<section class="course">
-  <h2>Common Mistakes BBA Students Make</h2>
-  <ul>
-    <li>Assuming BBA alone guarantees a good job</li>
-    <li>Ignoring internships</li>
-    <li>Weak communication skills</li>
-    <li>Late MBA exam preparation</li>
-  </ul>
-</section>
-
-<section class="course">
-  <h2>Long-Term Benefits of BBA (If Used Correctly)</h2>
-  <ul>
-    <li>Early clarity about management careers</li>
-    <li>Strong base for MBA</li>
-    <li>Confidence, communication & corporate exposure</li>
-    <li>Flexibility to shift roles & industries</li>
-  </ul>
-</section>
-
-<section class="course">
-  <h2>Should You Choose BBA?</h2>
+  <h2>🤔 Should You Choose BBA?</h2>
 
   <p><strong>Choose BBA if:</strong></p>
   <ul>
-    <li>You want a management-oriented career</li>
-    <li>You plan for MBA or leadership roles</li>
-    <li>You are proactive about skills & internships</li>
+    <li>You want early exposure to business & management</li>
+    <li>You plan to do MBA in the future</li>
+    <li>You want flexibility (corporate, startup, or specialization)</li>
   </ul>
 
   <p><strong>Avoid BBA if:</strong></p>
   <ul>
-    <li>You want a technical or accounting-heavy role</li>
-    <li>You dislike presentations & people interaction</li>
-    <li>You don’t plan to build skills or pursue MBA</li>
+    <li>You expect high salary just because of the degree</li>
+    <li>You dislike presentations, teamwork, and communication</li>
+    <li>You don’t plan to build skills alongside college</li>
   </ul>
 </section>
 
+<section class="course">
+  <h2>📍 What is BBA Really?</h2>
+  <p>
+    BBA is a foundation-level management degree.
+    It introduces students to marketing, finance, HR, operations, and strategy.
+  </p>
+  <p>
+    Think of BBA as <strong>exposure + preparation</strong>, not specialization.
+  </p>
+</section>
+
+<section class="course">
+  <h2>🗺️ BBA Roadmap (Year-wise)</h2>
+
+  <h3>Year 1 – Fundamentals</h3>
+  <ul>
+    <li>Business basics (marketing, finance, HR)</li>
+    <li>Communication & presentation skills</li>
+    <li>Basic Excel</li>
+  </ul>
+
+  <h3>Year 2 – Exploration</h3>
+  <ul>
+    <li>Choose interest area (marketing / finance / HR / ops)</li>
+    <li>Internships (even unpaid)</li>
+    <li>Advanced Excel & PowerPoint</li>
+  </ul>
+
+  <h3>Year 3 – Direction</h3>
+  <ul>
+    <li>Decide: MBA / Job / Certifications</li>
+    <li>Build resume & projects</li>
+    <li>Placement or entrance exam prep</li>
+  </ul>
+</section>
+
+<section class="course">
+  <h2>🚀 Skills That Make a BBA Graduate Valuable</h2>
+  <ul>
+    <li>Advanced Excel & basic data analysis</li>
+    <li>Business communication & presentations</li>
+    <li>Digital marketing OR finance basics</li>
+    <li>Internship experience</li>
+    <li>Problem-solving & teamwork</li>
+  </ul>
+
+  <p>
+    👉 <a href="skills.html">See the complete Commerce Skills Roadmap</a>
+  </p>
+</section>
+
+<section class="course">
+  <h2>💼 Career Options After BBA</h2>
+  <ul>
+    <li>Management Trainee</li>
+    <li>Sales / Marketing Executive</li>
+    <li>HR Executive</li>
+    <li>Operations Coordinator</li>
+    <li>Startup roles</li>
+  </ul>
+
+  <p>
+    Most high-growth roles come after MBA or skill specialization.
+  </p>
+</section>
+
+<section class="course">
+  <h2>💰 Salary Reality (India)</h2>
+  <ul>
+    <li>Fresh BBA graduate: ₹2–4 LPA</li>
+    <li>With skills + experience: ₹5–7 LPA</li>
+    <li>BBA + MBA: ₹8–20+ LPA (college & skills dependent)</li>
+  </ul>
+
+  <p><em>Degree opens doors. Skills decide income.</em></p>
+</section>
+
+<section class="course">
+  <h2>⚠️ Common Mistakes BBA Students Make</h2>
+  <ul>
+    <li>Ignoring internships</li>
+    <li>Only focusing on exams</li>
+    <li>No skill development</li>
+    <li>Delaying career decisions</li>
+  </ul>
+</section>
+
+<section class="course">
+  <h2>Still Unsure?</h2>
+  <p>
+    If you’re confused between BBA, B.Com, CA, MBA, or other paths:
+  </p>
+  <p>
+    👉 <a href="pathfinder.html">Use the Career Pathfinder Tool</a>
+  </p>
+</section>
+
 <footer>
-  <p>Built to help commerce students choose wisely — not blindly.</p>
+  <p>Built to give clarity, not false promises.</p>
 </footer>
 
 </body>
-
 </html>
