--- a/cs.html
+++ b/cs.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CS Career Roadmap</title>
-  <meta name="description" content="Company Secretary career roadmap including exams, skills, jobs, and growth.">
+  <title>CS Roadmap | Commerce Career Guide</title>
+  <meta name="description" content="Company Secretary (CS) roadmap with eligibility, skills, career scope, salary reality, and who should or should not choose CS.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <nav class="navbar">
@@ -24,150 +23,126 @@
 </nav>
 
 <header>
-  <h1>CS (Company Secretary) Career Roadmap</h1>
-  <p>Governance, compliance, law & corporate leadership explained clearly</p>
+  <h1>CS (Company Secretary)</h1>
+  <p>A governance, law, and compliance-focused professional career.</p>
 </header>
 
 <section class="course">
-  <h2>What is CS?</h2>
   <p>
-    Company Secretary (CS) is a professional course focused on corporate law,
-    governance, compliance, and board-level advisory. CS professionals act as a
-    bridge between management, shareholders, and regulators.
+    🔑 <strong>Important:</strong> CS is a niche career.
+    It offers strong roles in compliance and corporate law —
+    but only if you understand what you’re signing up for.
   </p>
 </section>
 
 <section class="course">
-  <h2>Who Should Choose CS?</h2>
-  <ul>
-    <li>Students interested in corporate law & compliance</li>
-    <li>People who like structured, rule-based work</li>
-    <li>Those aiming for boardroom & governance roles</li>
-    <li>Students comfortable with theory + application</li>
-  </ul>
-</section>
-
-<section class="course">
-  <h2>CS Course Structure</h2>
-  <ul>
-    <li><strong>CSEET</strong> – Entry-level exam</li>
-    <li><strong>Executive</strong> – Core law & governance</li>
-    <li><strong>Professional</strong> – Advanced corporate practice</li>
-    <li>Mandatory training & practical exposure</li>
-  </ul>
-</section>
-
-<section class="course">
-  <h2>CS Roadmap (Stage-wise)</h2>
-
-  <h3>Foundation / CSEET</h3>
-  <ul>
-    <li>Business communication & legal aptitude</li>
-    <li>Basic economics & management</li>
-    <li>Regular mock tests</li>
-  </ul>
-
-  <h3>Executive Level</h3>
-  <ul>
-    <li>Company law, securities law</li>
-    <li>Economic & commercial laws</li>
-    <li>Start internships under CS firms</li>
-  </ul>
-
-  <h3>Professional Level</h3>
-  <ul>
-    <li>Advanced corporate governance</li>
-    <li>Secretarial audits & compliance</li>
-    <li>Industry specialization</li>
-  </ul>
-</section>
-
-<section class="course">
-  <h2>Must-Learn Skills for CS (Beyond Exams)</h2>
-  <ul>
-    <li>Drafting & documentation</li>
-    <li>Corporate law interpretation</li>
-    <li>Excel & compliance tracking</li>
-    <li>Professional communication</li>
-    <li>Attention to detail</li>
-  </ul>
-  <p>
-    👉 Skills explained in depth on the
-    <a href="skills.html">Commerce Skills Page</a>.
-  </p>
-</section>
-
-<section class="course">
-  <h2>Career Options After CS</h2>
-  <ul>
-    <li>Company Secretary in corporate firms</li>
-    <li>Compliance Officer</li>
-    <li>Corporate Law Advisor</li>
-    <li>Secretarial Auditor</li>
-    <li>Independent CS Practice</li>
-  </ul>
-</section>
-
-<section class="course">
-  <h2>Salary Reality (India)</h2>
-  <ul>
-    <li>Fresh CS: ₹5–8 LPA</li>
-    <li>With 3–5 years experience: ₹10–18 LPA</li>
-    <li>Senior roles / Practice: ₹25+ LPA</li>
-  </ul>
-  <p><strong>Reality:</strong> Reputation & expertise matter more than marks.</p>
-</section>
-
-<section class="course">
-  <h2>Free Resources (Reliable)</h2>
-  <ul>
-    <li>
-      ICSI Resources –
-      <a href="https://www.icsi.edu/" target="_blank">
-        Official ICSI Website
-      </a>
-    </li>
-    <li>
-      CS Preparation –
-      <a href="https://www.youtube.com/@CSAnkitBansal" target="_blank">
-        CS Ankit Bansal (YouTube)
-      </a>
-    </li>
-  </ul>
-</section>
-
-<section class="course">
-  <h2>Common Mistakes CS Students Make</h2>
-  <ul>
-    <li>Ignoring practical training</li>
-    <li>Weak drafting skills</li>
-    <li>Studying without understanding application</li>
-    <li>Delaying internships</li>
-  </ul>
-</section>
-
-<section class="course">
-  <h2>Should You Choose CS?</h2>
+  <h2>🤔 Should You Choose CS?</h2>
 
   <p><strong>Choose CS if:</strong></p>
   <ul>
-    <li>You enjoy law, governance & compliance</li>
-    <li>You want a structured, respected corporate role</li>
-    <li>You are detail-oriented and patient</li>
+    <li>You are comfortable with law, rules, and documentation</li>
+    <li>You prefer structured, compliance-based work</li>
+    <li>You want roles close to top management & boards</li>
   </ul>
 
   <p><strong>Avoid CS if:</strong></p>
   <ul>
-    <li>You dislike law & theory-heavy subjects</li>
-    <li>You want quick results without long-term effort</li>
-    <li>You prefer creative or technical work</li>
+    <li>You dislike law and theory-heavy subjects</li>
+    <li>You want quick money or flashy roles</li>
+    <li>You prefer numbers over legal interpretation</li>
   </ul>
 </section>
 
+<section class="course">
+  <h2>📍 What Does a CS Actually Do?</h2>
+  <p>
+    A Company Secretary ensures that a company follows corporate laws,
+    governance standards, and regulatory requirements.
+  </p>
+
+  <ul>
+    <li>Company law & compliance</li>
+    <li>Board meetings & legal documentation</li>
+    <li>SEBI, MCA & regulatory filings</li>
+    <li>Advising directors on legal obligations</li>
+  </ul>
+</section>
+
+<section class="course">
+  <h2>🗺️ CS Roadmap</h2>
+
+  <ul>
+    <li><strong>Foundation:</strong> Business law, economics, basic accounting</li>
+    <li><strong>Executive:</strong> Company law, tax laws, capital markets</li>
+    <li><strong>Professional:</strong> Governance, compliance, strategy</li>
+    <li><strong>Training:</strong> Practical exposure under a CS</li>
+  </ul>
+
+  <p>
+    CS is a long-term commitment. Consistency matters more than speed.
+  </p>
+</section>
+
+<section class="course">
+  <h2>🚀 Skills That Make a CS Valuable</h2>
+  <ul>
+    <li>Drafting & documentation skills</li>
+    <li>Strong understanding of company law</li>
+    <li>Business communication</li>
+    <li>Compliance tools & reporting</li>
+    <li>Basic finance understanding</li>
+  </ul>
+
+  <p>
+    👉 <a href="skills.html">View the Commerce Skills Roadmap</a>
+  </p>
+</section>
+
+<section class="course">
+  <h2>💼 Career Options After CS</h2>
+  <ul>
+    <li>Company Secretary in corporates</li>
+    <li>Compliance officer</li>
+    <li>Corporate governance roles</li>
+    <li>CS in practice</li>
+    <li>Legal & regulatory advisory roles</li>
+  </ul>
+</section>
+
+<section class="course">
+  <h2>💰 Salary Reality (India)</h2>
+  <ul>
+    <li>Fresh CS: ₹5–8 LPA</li>
+    <li>With 3–5 years experience: ₹10–15 LPA</li>
+    <li>Senior / specialized roles: ₹20+ LPA</li>
+  </ul>
+
+  <p><em>Growth depends heavily on skills and domain exposure.</em></p>
+</section>
+
+<section class="course">
+  <h2>⚠️ Common Mistakes CS Students Make</h2>
+  <ul>
+    <li>Ignoring practical exposure</li>
+    <li>Studying theory without understanding application</li>
+    <li>Assuming CS = automatic high salary</li>
+    <li>Weak communication skills</li>
+  </ul>
+</section>
+
+<section class="course">
+  <h2>Still Confused?</h2>
+  <p>
+    If you’re unsure whether CS fits you better than CA, CMA, or MBA:
+  </p>
+  <p>
+    👉 <a href="pathfinder.html">Use the Career Pathfinder Tool</a>
+  </p>
+</section>
+
 <footer>
-  <p>Clear choices create strong careers.</p>
+  <p>Built for clarity, not confusion.</p>
 </footer>
 
 </body>
-
 </html>
